--- a/Adventure/Views/Shared/_Layout.cshtml
+++ b/Adventure/Views/Shared/_Layout.cshtml
@@ -80,7 +80,7 @@
                                     @Html.ActionLink("我的Adventure", "Index", "Admin", new { area = "" }, new { @class = "text-center" })
                                 </li>
                                 <li>
-                                    @Html.ActionLink("发布房源", "Index", "Admin", new { area = "" }, new { @class = "text-center" })
+                                    @Html.ActionLink("发布房源", "Release", "HomeStay", new { area = "" }, new { @class = "text-center" })
                                 </li>
                                 <li>
                                     @Html.ActionLink("发布体验活动", "Publish", "Activity", new { area = "" }, new { @class = "text-center" })
