--- a/Adventure/Views/Activity/Publish.cshtml
+++ b/Adventure/Views/Activity/Publish.cshtml
@@ -104,7 +104,7 @@
                             <!-- 创建新活动 END -->
                         </form>
 
-                        <form id="add-instance" action="#" method="post">
+                        <form id="add-instance" action="AddInstance" method="post">
                             <!-- 创建活动实例 -->
                             <div>
                                 <div class="row">
@@ -112,64 +112,50 @@
                                         <div class="form-group">
                                             <label id="product_label">产品ID:</label>
                                             <input type="text" id="submitProduct" class="form-control" name="productID" hidden>
-                                        </div>
-                                        <div class="form-group">
-
-                                            <label id="product_name">产品名称:</label>
-                                        </div>
-
-                                    </div>
-                                    </div>
-
-                                <div class="row">
-                                    <div class="col-sm-5 col-sm-offset-1" style="margin-left:auto; margin-right:auto;">
-                                        <div class="form-group">
-                                            <label>开始时间</label>
-                                            <input type="date" id="start-time" class="form-control" name="start_time" required="required">
+                                            <br><label id="product_name">产品名称:</label>
                                         </div>
                                     </div>
                                     <div class="col-sm-5 col-sm-offset-1" style="margin-left:auto; margin-right:auto;">
-                                        <div class="form-group">
-                                            <label>结束时间</label>
-                                            <input type="date" id="end-time" class="form-control time-input" name="end_time" required="required">
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-5 col-sm-offset-1" style="margin-left:auto; margin-right:auto;">
-                                        <div class="form-group">
-                                            <label>限定人数</label>
-                                            <div class="input-group">
-                                                <input type="number" class="form-control" name="limit_num" required="required"
-                                                       onkeyup="if (this.value.length == 1) { this.value = this.value.replace(/[^1-9]/g, '') }else { this.value = this.value.replace(/\D/g, '') }"
-                                                       onafterpaste="if(this.value.length==1){this.value=this.value.replace(/[^1-9]/g,'')}else{this.value=this.value.replace(/\D/g,'')}">
-                                                <span class="input-group-addon"> 人 </span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-5 col-sm-offset-1" style="margin-left:auto; margin-right:auto;">
-                                        <div class="form-group">
-                                            <label>总价</label>
-                                            <div class="input-group">
-                                                <input type="number" class="form-control" name="price" required="required"
-                                                       onkeyup="if (this.value.length == 1) { this.value = this.value.replace(/[^1-9]/g, '') }else { this.value = this.value.replace(/\D/g, '') }"
-                                                       onafterpaste="if(this.value.length==1){this.value=this.value.replace(/[^1-9]/g,'')}else{this.value=this.value.replace(/\D/g,'')}">
-                                                <span class="input-group-addon"> ￥ </span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-8 col-sm-offset-2" style="margin-left:auto; margin-right:auto;">
-                                        <div class="form-group">
-                                            <button type="submit" class="form-control">发布</button>
-                                        </div>
-                                    </div>
-                                    <div id="delete-button" class="col-sm-8 col-sm-offset-2" style="margin-left:auto; margin-right:auto;">
-                                        <div class="form-group">
-                                            <button id="delete-button" class="form-control">取消</button>
+                                        <label>总价</label>
+                                        <div class="input-group">
+                                            <input type="number" class="form-control" name="price" required="required"
+                                                   onkeyup="if (this.value.length == 1) { this.value = this.value.replace(/[^1-9]/g, '') }else { this.value = this.value.replace(/\D/g, '') }"
+                                                   onafterpaste="if(this.value.length==1){this.value=this.value.replace(/[^1-9]/g,'')}else{this.value=this.value.replace(/\D/g,'')}">
+                                            <span class="input-group-addon"> ￥ </span>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <!-- 创建活动实例 END -->
-                        </form>
+                                <div class="row">
+                                </div>
+                                    <div class="row">
+                                        <div class="col-sm-5 col-sm-offset-1" style="margin-left:auto; margin-right:auto;">
+                                            <div class="form-group">
+                                                <label>开始时间</label>
+                                                <input type="date" id="start-time" class="form-control" name="start_time" required="required">
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-5 col-sm-offset-1" style="margin-left:auto; margin-right:auto;">
+                                            <div class="form-group">
+                                                <label>结束时间</label>
+                                                <input type="date" id="end-time" class="form-control time-input" name="end_time" required="required">
+                                            </div>
+                                        </div>
+
+
+                                        <div class="col-sm-8 col-sm-offset-2" style="margin-left:auto; margin-right:auto;">
+                                            <div class="form-group">
+                                                <button type="submit" class="form-control">发布</button>
+                                            </div>
+                                        </div>
+                                        <div id="delete-button" class="col-sm-8 col-sm-offset-2" style="margin-left:auto; margin-right:auto;">
+                                            <div class="form-group">
+                                                <button id="delete-button" class="form-control">取消</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- 创建活动实例 END -->
+                               </form>
 
                     </div>
                 </div>
