--- a/Adventure/Views/Home/Contact.cshtml
+++ b/Adventure/Views/Home/Contact.cshtml
@@ -44,25 +44,25 @@
                 <h2 class="mb-4">投诉与反馈</h2>
                 <p>我们十分重视Adventure的每一位客户对每一次的民宿体验和旅行活动的感受</p>
                 <p>如果您对于某一次住宿体验或者是旅行活动有任何不满，请填写下列信息联系我们</p>
-</div>
+            </div>
         </div>
         <div class="row block-9">
             <div class="col-sm-6 col-sm-offset-3 form-box">
                 <form action="#">
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="您的姓名">
+                        <input type="text" class="form-control" name="user_name" placeholder="您的姓名">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="您的电子邮箱">
+                        <input type="text" class="form-control" name="email" placeholder="您的电子邮箱">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="订单号">
+                        <input type="text" class="form-control" name="orderid" placeholder="订单号">
                     </div>
                     <div class="form-group">
-                        <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="投诉缘由"></textarea>
+                        <textarea  id="" cols="30" rows="7" class="form-control" name="reason" placeholder="反馈内容"></textarea>
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
+                        <input type="submit" value="提交反馈" class="btn btn-primary py-3 px-5">
                     </div>
                 </form>
 
