--- a/Adventure/Views/Login/Index.cshtml
+++ b/Adventure/Views/Login/Index.cshtml
@@ -96,7 +96,7 @@
                                                 <input type="password" name="form-password" placeholder="Password..." class="form-password form-control" id="form-password">
                                             </div>
                                             <button type="button" class="btn btn-previous" onclick="turnToRegister()">注册</button>
-                                            <button type="button" class="btn" onclick="loginCheck()">提交登陆</button>
+                                            <button type="button" class="btn" style="float:right" onclick="loginCheck()">提交登陆</button>
                                         </div>
                                     </fieldset>
                                 </form>
