--- a/Adventure/Views/PersonInfo/Index.cshtml
+++ b/Adventure/Views/PersonInfo/Index.cshtml
@@ -62,7 +62,6 @@
                             <div class="col-sm-6 col-sm-offset-3 form-box">
 
                                 <form role="form" action="@Url.Action("")" method="post" class="registration-form" enctype="multipart/form-data">
-
                                     <fieldset>
                                         <div class="form-top">
                                             <div class="form-top-left">
@@ -88,47 +87,13 @@
                                                           class="form-about-yourself form-control" id="form-about-yourself">@Session["self_introduction"]</textarea>
                                             </div>
                                             <button type="button" class="btn" onclick="unlockEdit();">编辑我的信息</button>
-                                            <button type="button" class="btn btn-next">下一页</button>
+                                            <button type="button" style="float:right" class="btn btn-next">下一页</button>
                                         </div>
                                     </fieldset>
-
                                     <fieldset>
                                         <div class="form-top">
                                             <div class="form-top-left">
                                                 <h3>Step 2 / 4</h3>
-                                                <h4>您的账户信息</h4>
-                                            </div>
-                                            <div class="form-top-right">
-                                                <i class="fa fa-key"></i>
-                                            </div>
-                                        </div>
-                                        <div class="form-bottom">
-                                            <div class="form-group">
-                                                <label class="sr-only" for="form-username">用户名</label>
-                                                <input type="text" name="form-username" disabled="disabled" placeholder="User Name..." class="form-control" value="@Session["user_id"]" id="form-username">
-                                            </div>
-                                            <div class="form-group">
-                                                <label class="sr-only" for="form-email">邮箱</label>
-                                                <input type="text" name="form-email" disabled="disabled" placeholder="Email..." class="form-email form-control" value="@Session["email_address"]" id="form-email">
-                                            </div>
-                                            <div class="form-group">
-                                                <label class="sr-only" for="form-password">密码</label>
-                                                <input type="password" name="form-password" disabled="disabled" placeholder="Password..." class="form-password form-control" id="form-password">
-                                            </div>
-                                            <div class="form-group">
-                                                <label class="sr-only" for="form-repeat-password">确认密码</label>
-                                                <input type="password" disabled="disabled" name="form-repeat-password" placeholder="Repeat password..."
-                                                       class="form-repeat-password form-control" id="form-repeat-password">
-                                            </div>
-                                            <button type="button" class="btn btn-previous">上一页</button>
-                                            <button type="button" class="btn btn-next">下一页</button>
-                                        </div>
-                                    </fieldset>
-
-                                    <fieldset>
-                                        <div class="form-top">
-                                            <div class="form-top-left">
-                                                <h3>Step 3 / 3</h3>
                                                 <h4>您的详细信息</h4>
                                             </div>
                                             <div class="form-top-right">
@@ -166,13 +131,13 @@
                                                 <input type="text" name="form-language" disabled="disabled" placeholder="Your Language..." class="form-control" value="@Session["main_language"]" id="form-language">
                                             </div>
                                             <button type="button" class="btn btn-previous">上一页</button>
-                                            <button type="button" class="btn btn-next">下一页</button>
+                                            <button type="button" style="float:right" class="btn btn-next">下一页</button>
                                         </div>
                                     </fieldset>
                                     <fieldset>
                                         <div class="form-top">
                                             <div class="form-top-left">
-                                                <h3>Step 4 / 4</h3>
+                                                <h3>Step 3 / 4</h3>
                                                 <h4>您的个性头像</h4>
                                             </div>
                                             <div class="form-top-right">
@@ -181,20 +146,51 @@
                                         </div>
                                         <div class="form-bottom">
                                             <div class="form-group">
-                                                    <div class="item">
-                                                        <div class="testimony-wrap p-4 pb-5" style="margin-top:50px">
-                                                            <div class="user-img mb-5" id="iconShown" style="background-image: url(@Session["head_icon"])">
-                                                            </div>
-                                                            <h5>上传您的头像</h5>
-                                                            <input name="filedata" onchange="preview(this)" id="myIcon" type="file" value="浏览" /><br />
+                                                <div class="item">
+                                                    <div class="testimony-wrap p-4 pb-5" style="margin-top:50px">
+                                                        <div class="user-img mb-5" id="iconShown" style="background-image: url(@Session["head_icon"])">
                                                         </div>
+                                                        <h5>上传您的头像</h5>
+                                                        <input name="filedata" onchange="preview(this)" id="myIcon" type="file" value="浏览" /><br />
                                                     </div>
+                                                </div>
                                             </div>
-                                                            <button type="button" class="btn btn-previous">上一页</button>
-                                                            <button type="submit" id="submitBtn" disabled="disabled" class="btn">提交注册</button>
-                                                        </div>
-                                        </fieldset>
-
+                                            <button type="button" class="btn btn-previous">上一页</button>
+                                            <button type="button" style="float:right" class="btn btn-next">下一页</button>
+                                        </div>
+                                    </fieldset>
+                                    <fieldset>
+                                        <div class="form-top">
+                                            <div class="form-top-left">
+                                                <h3>Step 4 / 4</h3>
+                                                <h4>您的账户信息</h4>
+                                            </div>
+                                            <div class="form-top-right">
+                                                <i class="fa fa-key"></i>
+                                            </div>
+                                        </div>
+                                        <div class="form-bottom">
+                                            <div class="form-group">
+                                                <label class="sr-only" for="form-username">用户名</label>
+                                                <input type="text" name="form-username" disabled="disabled" placeholder="User Name..." class="form-control" value="@Session["user_id"]" id="form-username">
+                                            </div>
+                                            <div class="form-group">
+                                                <label class="sr-only" for="form-email">邮箱</label>
+                                                <input type="text" name="form-email" disabled="disabled" placeholder="Email..." class="form-email form-control" value="@Session["email_address"]" id="form-email">
+                                            </div>
+                                            <div class="form-group">
+                                                <label class="sr-only" for="form-password">密码</label>
+                                                <input type="password" name="form-password" disabled="disabled" placeholder="Password..." class="form-password form-control" id="form-password">
+                                            </div>
+                                            <div class="form-group">
+                                                <label class="sr-only" for="form-repeat-password">确认密码</label>
+                                                <input type="password" disabled="disabled" name="form-repeat-password" placeholder="Repeat password..."
+                                                       class="form-repeat-password form-control" id="form-repeat-password">
+                                            </div>
+                                            <button type="button" class="btn btn-previous">上一页</button>
+                                            <button type="submit" id="submitBtn" style="float:right" disabled="disabled" class="btn">提交更改</button>
+                                        </div>
+                                    </fieldset>
                                 </form>
 
                             </div>
