--- a/Adventure/Views/Register/Index.cshtml
+++ b/Adventure/Views/Register/Index.cshtml
@@ -66,7 +66,7 @@
                                                           class="form-about-yourself form-control" id="form-about-yourself"></textarea>
                                             </div>
                                             <button type="button" class="btn btn-next" onclick="turnToLogin()">已经有账户?</button>
-                                            <button type="button" class="btn btn-next">下一页</button>
+                                            <button type="button" style="float:right" class="btn btn-next">下一页</button>
                                         </div>
                                     </fieldset>
 
@@ -99,7 +99,7 @@
                                                        class="form-repeat-password form-control" id="form-repeat-password" >
                                             </div>
                                             <button type="button" class="btn btn-previous">上一页</button>
-                                            <button type="button" class="btn btn-next">下一页</button>
+                                            <button type="button" style="float:right" class="btn btn-next">下一页</button>
                                         </div>
                                     </fieldset>
 
@@ -107,7 +107,7 @@
                                         <div class="form-top">
                                             <div class="form-top-left">
                                                 <h3>Step 3 / 3</h3>
-                                                <h4>请告诉我们更多关于您的的信息</h4>
+                                                <h4>请告诉我们更多关于您的信息</h4>
                                             </div>
                                             <div class="form-top-right">
                                                 <i class="fa fa-twitter"></i>
@@ -134,7 +134,7 @@
                                                 <input type="text" name="form-language" placeholder="Your Language..." class="form-control" id="form-language">
                                             </div>
                                             <button type="button" class="btn btn-previous">上一页</button>
-                                            <button type="submit" class="btn">提交注册</button>
+                                            <button type="submit" style="float:right" class="btn">提交注册</button>
                                         </div>
                                     </fieldset>
 
