--- a/Adventure/Views/Home/Favourites.cshtml
+++ b/Adventure/Views/Home/Favourites.cshtml
@@ -16,86 +16,91 @@
 </div>
 
 <!-- 收藏单 -->
-<section class="ftco-section testimony-section" style="background-color:transparent;background-image: url('../images/bg_1.jpg')">
+<section class="ftco-section testimony-section" style="background-image: url(../images/Favor_bg.jpg);" data-stellar-background-ratio="0.5">
     <div class="container">
         <div class="row justify-content-center mb-5 pb-3">
             <div class="col-md-7 text-center heading-section heading-section-white ftco-animate">
-                <h2 class="mb-4">心愿单</h2>
-                <p>你会在这里看到你收藏的房源</p>
+                <h2 class="mb-4">Favourites</h2>
+                @{
+                    if ((ViewBag.favouriteActivity != null && ViewBag.favouriteActivity.Length >= 1) ||((ViewBag.favouriteHomestay != null && ViewBag.favouriteHomestay.Length >= 1)))
+                    {
+                        <p>你可以在心愿单看到你在Adventure收藏过的房源和体验活动</p>
+
+                    }
+                    else
+                    {
+                        <p>你还没有添加任何房源和体验活动到你的心愿单哦~快去探索Adventure吧~</p>
+
+                    }
+                }
             </div>
         </div>
         <div class="row ftco-animate">
             <div class="col-md-12">
                 <div class="carousel-testimony owl-carousel ftco-owl">
-                    <div class="item">
-                        <div class="testimony-wrap p-4 pb-5">
-                            <div class="user-img mb-5" style="background-image: url(../images/person_1.jpg)">
-                            </div>
-                            <div class="text">
-                                <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                                <p class="name">Mark Web</p>
-                                <span class="position">Marketing Manager</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="testimony-wrap p-4 pb-5">
-                            <div class="user-img mb-5" style="background-image: url(../images/person_2.jpg)">
-                            </div>
-                            <div class="text">
-                                <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                                <p class="name">Mark Web</p>
-                                <span class="position">Interface Designer</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="testimony-wrap p-4 pb-5">
-                            <div class="user-img mb-5" style="background-image: url(../images/person_3.jpg)">
-                            </div>
-                            <div class="text">
-                                <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                                <p class="name">Mark Web</p>
-                                <span class="position">UI Designer</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="testimony-wrap p-4 pb-5">
-                            <div class="user-img mb-5" style="background-image: url(../images/person_1.jpg)">
-                            </div>
-                            <div class="text">
-                                <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                                <p class="name">Mark Web</p>
-                                <span class="position">Web Developer</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="testimony-wrap p-4 pb-5">
-                            <div class="user-img mb-5" style="background-image: url(../images/person_1.jpg)">
-                            </div>
-                            <div class="text">
-                                <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                                <p class="name">Mark Web</p>
-                                <span class="position">System Analyst</span>
-                            </div>
-                        </div>
-                    </div>
+                    @{
+                        if (ViewBag.favouriteActivity != null && ViewBag.favouriteActivity.Length >= 1)
+                        {
+                            for (int i = 0; i < ViewBag.favouriteActivity.Length; i++)
+                            {
+                                <div class="item">
+                                    <div class="testimony-wrap p-4 pb-5">
+                                        <div class="user-img mb-5" style="background-image: url(@ViewBag.favouriteActivity[i].activity_pictures)">
+                                        </div>
+                                        <div class="text">
+                                            <a href="~/Activity/SingleActivity?productID=@ViewBag.favouriteActivity[i].activity_id">
+                                                <p class="mb-5" style="color:#FFFFFF">@ViewBag.favouriteActivity[i].activity_name</p>
+                                            </a>
+                                            <p class="name">体验活动</p>
+
+                                            <span class="position">@ViewBag.favouriteActivity[i].address</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            }
+
+                        }
+                        else
+                        {
+
+                        }
+                        if (ViewBag.favouriteHomestay != null && ViewBag.favouriteHomestay.Length >= 1)
+                        {
+                            for (int i = 0; i < ViewBag.favouriteHomestay.Length; i++)
+                            {
+                                <div class="item">
+                                    <div class="testimony-wrap p-4 pb-5">
+                                        <div class="user-img mb-5" style="background-image: url(@ViewBag.favouriteHomestay[i].homestay_pictures)">
+                                        </div>
+                                        <div class="text">
+                                            <a href="~/HomeStay/StayInfo?productID=@ViewBag.favouriteHomestay[i].homestay_id">
+                                                <p class="mb-5" style="color:#FFFFFF">@ViewBag.favouriteHomestay[i].homestay_name</p>
+                                            </a>
+                                            <p class="name">民宿</p>
+
+                                            <span class="position">@ViewBag.favouriteHomestay[i].address</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            }
+
+                        }
+                        else
+                        {
+
+                        }
+                    }
                 </div>
             </div>
         </div>
     </div>
-</section>
-<!-- 收藏单结束 -->
-<!-- 历史浏览记录 -->
-<section class="ftco-section testimony-section" >
+
     <div class="container">
         <div class="row justify-content-center mb-5 pb-3">
             <div class="col-md-7 text-center heading-section heading-section-white ftco-animate">
                 <h2 class="mb-4">History</h2>
                 @{
-                    if (ViewBag.activityList != null && ViewBag.activityList.Length >= 1)
+                    if ((ViewBag.activityList != null && ViewBag.activityList.Length >= 1) || (ViewBag.homestayList != null && ViewBag.homestayList.Length >= 1))
                     {
                         <p>你会在这里看到你在Adventure浏览过的房源和体验活动记录</p>
 
@@ -122,9 +127,12 @@
                                         </div>
                                         <div class="text">
                                             <a href="~/Activity/SingleActivity?productID=@ViewBag.activityList[i].activity_id">
-                                                <p class="mb-5" style="color:#FFFFFF">@ViewBag.activityList[i].activity_name</p></a>
-                                                <span class="position">@ViewBag.activityList[i].address</span>
-</div>
+                                                <p class="mb-5" style="color:#FFFFFF">@ViewBag.activityList[i].activity_name</p>
+                                            </a>
+                                            <p class="name">体验活动</p>
+
+                                            <span class="position">@ViewBag.activityList[i].address</span>
+                                        </div>
                                     </div>
                                 </div>
                             }
@@ -143,7 +151,11 @@
                                         <div class="user-img mb-5" style="background-image: url(@ViewBag.homestayList[i].homestay_pictures)">
                                         </div>
                                         <div class="text">
-                                            <a href="~/HomeStay/StayInfo?productID=@ViewBag.HomestayList[i].homestay_id"><p class="mb-5" style="color:#FFFFFF">@ViewBag.homestayList[i].homestay_name</p></a>
+                                            <a href="~/HomeStay/StayInfo?productID=@ViewBag.HomestayList[i].homestay_id">
+                                                <p class="mb-5" style="color:#FFFFFF">@ViewBag.homestayList[i].homestay_name</p>
+                                            </a>
+                                            <p class="name">民宿</p>
+
                                             <span class="position">@ViewBag.homestayList[i].address</span>
                                         </div>
                                     </div>
