--- a/Adventure/Views/Order/Order_Layout.cshtml
+++ b/Adventure/Views/Order/Order_Layout.cshtml
@@ -73,6 +73,9 @@
                     }
                     else
                     {
+                        <li>
+                            @Html.ActionLink("心愿单", "Favourites", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                        </li>
                         <li class="dropdown navbar-brand">
                             <a href="#" data-toggle="dropdown " class="dropdown-toggle">My Adventure</a>
                             <ul class="dropdown-menu">
