--- a/Adventure/Views/Blog/Index.cshtml
+++ b/Adventure/Views/Blog/Index.cshtml
@@ -2,14 +2,14 @@
 @{
     ViewBag.Title = "旅行故事";
 }
+<link rel="stylesheet" href="~/Content/Blogstyle.css" />
 
-<div class="hero-wrap js-fullheight" style="background-image: url('../images/bloghead.jpg');">
+<div class="hero-wrap js-fullheight" style="background-image: url(../../images/bg_1.jpg);">
     <div class="overlay"></div>
     <div class="container">
-        <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-start" data-scrollax-parent="true">
-            <div class="col-md-9 ftco-animate mb-5 pb-5 text-center text-md-left" data-scrollax=" properties: { translateY: '70%' }">
-                <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }" style="color:#000000">Travel Story</h1>
-                <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }" style="color:#000000">分享旅行中中的点点滴滴</p>
+        <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
+            <div class="col-md-9 text-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
+                <h1 class="mb-3 bread" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">旅行故事</h1>
             </div>
         </div>
     </div>
@@ -17,19 +17,34 @@
 
 <section>
     <div class="rows inn-page-bg com-colo">
-        <div class="container inn-page-con-bg tb-space pad-bot-redu-5" id="inner-page-title">
-            <!-- TITLE & DESCRIPTION -->
-            <div class="spe-title col-md-12">
-                <h2>Holiday Tour <span>Blog</span> Posts</h2>
-                <div class="title-line">
-                    <div class="tl-1"></div>
-                    <div class="tl-2"></div>
-                    <div class="tl-3"></div>
-                </div>
-                <p>World's leading tour and travels Booking website,Over 30,000 packages worldwide. Book travel packages and enjoy your holidays with distinctive experience</p>
+        <div class="container inn-page-con-bg tb-space pad-bot-redu-5" id="inner-page-title" style="padding-top:0">
+
+            <div>
+                <div class="blog-btn" onclick="location='../Blog/NewBlog'" style="background-image: url('../images/blogbtn_1.jpg')">写下旅行故事</div>
+                <div class="blog-btn" onclick="location='../Admin/ViewBlog'" style="background-image: url('../images/blogbtn_2.jpg')">我的旅行故事</div>
             </div>
+
+
+
+            <!-- TITLE & DESCRIPTION -->
+            @*<div class="spe-title col-md-12">
+                    <h2>Holiday Tour <span>Blog</span> Posts</h2>
+                    <div class="title-line">
+                        <div class="tl-1"></div>
+                        <div class="tl-2"></div>
+                        <div class="tl-3"></div>
+                    </div>
+                    <p>World's leading tour and travels Booking website,Over 30,000 packages worldwide. Book travel packages and enjoy your holidays with distinctive experience</p>
+                </div>*@
+            <div class="line-text-box spe-title col-md-12" style="margin-top:20px;margin-bottom:20px">
+                <span class="grey-line"></span>
+                <span class="line-text">精选旅行动态</span>
+                <span class="grey-line"></span>
+
+            </div>
+
             <!--===== POSTS ======-->
-            <div class="rows">
+            <div id="allblogs" class="rows">
                 <div class="posts">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <img src="../images/iplace-6.jpg" alt="" />
@@ -66,20 +81,36 @@
                         <a href="#" class="link-btn">Read more</a>
                     </div>
                 </div>
-                <div class="posts">
-                    <div class="col-md-6 col-sm-6 col-xs-12">
-                        <img src="../images/iplace-4.jpg" alt="" />
-                    </div>
-                    <div class="col-md-6 col-sm-6 col-xs-12">
-                        <h3>Lorem ipsum dummy content</h3>
-                        <h5><span class="post_author">Author: Johnson</span><span class="post_date">Date: 12th May,2016</span><span class="post_city">City: Illunois</span></h5>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
-                        <p>Randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
-                        <a href="#" class="link-btn">Read more</a>
-                    </div>
-                </div>
+                @*<div class="posts">
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            <img src="@ViewBag.AllBlogs[i].picture" alt="" />
+                        </div>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            <h3>@ViewBag.AllBlogs[i].title</h3>
+                            <h5><span class="post_author">@ViewBag.AllBlogs[i].writer</span><span class="post_date">@ViewBag.AllBlogs[i].time</span></h5>
+                            <p>@ViewBag.AllBlogs[i].content</p>
+                            <a href='../Blog/BlogDetail?BlogId=@ViewBag.AllBlogs[i].blogId' class="link-btn">Read more</a>
+                        </div>
+                    </div>*@
+                @{
+
+                    for (int j = 0; j < ViewBag.AllBlogs.Length; j++)
+                    {
+                        <div class="posts">
+                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                <img src="@ViewBag.AllBlogs[j].pictures" alt="" />
+                            </div>
+                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                <h3>@ViewBag.AllBlogs[j].title</h3>
+                                <h5><span class="post_author">@ViewBag.AllBlogs[j].user_id</span><span class="post_date">@ViewBag.AllBlogs[j].times</span></h5>
+                                <p>@ViewBag.AllBlogs[j].content_s</p>
+                                <a href='../Blog/BlogDetail?BlogId=@ViewBag.AllBlogs[j].story_id' class="link-btn">Read more</a>
+                            </div>
+                        </div>
+                    }
+                }
             </div>
-            <!--===== POST END ======-->
+
         </div>
     </div>
 </section>
