--- a/Adventure/Views/Home/Index.cshtml
+++ b/Adventure/Views/Home/Index.cshtml
@@ -2,6 +2,14 @@
     ViewBag.Title = "度假屋、民宿、体验与旅行故事";
 }
 <script>
+        $(document).ready(function () {
+
+        var message="@Session["message"]";
+        if (message!= "") {
+            alert(message);
+            @{Session["message"] = null;}
+        }
+    })
    /*
     $(document).ready(function () {
         $.get("../Home/getCount",
@@ -185,37 +193,13 @@
     </div>
 </section>
 
-<section class="ftco-about d-md-flex">
-    <div class="one-half img" style="background-image: url(../images/about.jpg);"></div>
-    <div class="one-half ftco-animate">
-        <div class="heading-section ftco-animate ">
-            <h3 class="mb-4">Adventure-最棒的旅行供应商</h3>
-        </div>
-        <div>
-            <p>
-                在全球多个城市，Adventure拥有世界一流的客户服务和日益增长的用户社区，为人们提供了一个最简单有效的途径，让他们可以利用闲置空间赚钱，并将它们展示给成百上千万受众，为您带来独一无二的住宿体验。
-            </p>
-        </div>
-    </div>
-</section>
-<section class="ftco-about d-md-flex">
-    <div class="one-half img" style="background-image: url(../images/about.jpg);"></div>
-    <div class="one-half ftco-animate">
-        <div class="heading-section ftco-animate ">
-            <h3 class="mb-4">Adventure-旅行的最佳解决方案</h3>
-        </div>
-        <div>
-            <p>
-                在全球多个城市，Adventure拥有世界一流的客户服务和日益增长的用户社区，为人们提供了一个最简单有效的途径，让他们可以利用闲置空间赚钱，并将它们展示给成百上千万受众，为您带来独一无二的住宿体验。
-            </p>
-        </div>
-    </div>
-</section>
+
+
 <section class="ftco-section">
     <div class="container">
         <div class="row justify-content-center mb-5 pb-3">
             <div class="col-md-7 heading-section text-center ftco-animate">
-                <h2 class="mb-4">The Latest Activity</h2>
+                <h2 class="mb-4">Popular Activities</h2>
             </div>
         </div>
     </div>
@@ -312,7 +296,7 @@
     <div class="container">
         <div class="row justify-content-center mb-5 pb-3">
             <div class="col-md-7 heading-section text-center ftco-animate">
-                <h2 class="mb-4"><strong>Popular</strong> Hotels</h2>
+                <h2 class="mb-4"><strong>Popular</strong> Homestays</h2>
             </div>
         </div>
     </div>
@@ -325,7 +309,7 @@
                     {
                     <div class="col-sm col-md-6 col-lg ftco-animate">
                         <div class="destination">
-                            <a href="#" class="img img-2 d-flex justify-content-center align-items-center" style="background-image: url(@ViewBag.recommend_house[i].homestay_pictures);">
+                            <a href="~/HomeStay/StayInfo?productID=@ViewBag.recommend_house[i].homestay_id" class="img img-2 d-flex justify-content-center align-items-center" style="background-image: url(@ViewBag.recommend_house[i].homestay_pictures);">
                                 <div class="icon d-flex justify-content-center align-items-center">
                                     <span class="icon-link"></span>
                                 </div>
@@ -529,6 +513,19 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+</section>
+<section class="ftco-about d-md-flex">
+    <div class="one-half img" style="background-image: url(../images/about.jpg);"></div>
+    <div class="one-half ftco-animate">
+        <div class="heading-section ftco-animate ">
+            <h3 class="mb-4">Adventure-最棒的旅行供应商</h3>
+        </div>
+        <div>
+            <p>
+                在全球多个城市，Adventure拥有世界一流的客户服务和日益增长的用户社区，为人们提供了一个最简单有效的途径，让他们可以利用闲置空间赚钱，并将它们展示给成百上千万受众，为您带来独一无二的住宿体验。与此同时，Adventure体验是由当地人设计并带队进行的活动。它不只是普通的旅游项目或课程，而且它们将让参与者亲历独特的当地生活。无需家有空房，任何人都可借此机会与他人分享自己的业余爱好和技能专长。
+            </p>
         </div>
     </div>
 </section>
