--- a/Adventure/Views/HomeStay/Release.cshtml
+++ b/Adventure/Views/HomeStay/Release.cshtml
@@ -19,6 +19,11 @@
 
             }
         }
+        var message="@Session["message"]";
+        if (message!= "") {
+            alert(message);
+            @{Session["message"] = null;}
+        }
     })
 </script>
 
